--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 Thumbs.db
 .vscode/
+.idea/
 
 vendor/
 composer.lock
@@ -17,3 +18,6 @@ logs/
 .phpunit.result.cache
 
 .env
+
+node_modules/
+dist/
